--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </div>
         </section>
         <section id="controls">
-            <button @click="attack()">ATTACK</button>
-            <button>SPECIAL ATTACK</button>
-            <button>HEAL</button>
-            <button>SURRENDER</button>
+            <button @click="attack">ATTACK</button>
+            <button :disabled="useSpecialAttack" @click="specialAttack">SPECIAL ATTACK</button>
+            <button @click="healPlayer">HEAL</button>
+            <button @click="surrender">SURRENDER</button>
         </section>
         <section id="log" class="container">
             <h2>Battle Log</h2>
