--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </section>
         <section class="container" v-if="winner">
             <h2>Game Over!</h2>
-            <h3 v-if="winner === 'Monster'">You lost!</h3>
-            <h3 v-if="winner === 'Player'">You won!</h3>
-            <h3 v-if="winner === 'Draw'">It's a draw!</h3>
+            <h3 v-if="winner === 'monster'">You lost!</h3>
+            <h3 v-if="winner === 'player'">You won!</h3>
+            <h3 v-if="winner === 'draw'">It's a draw!</h3>
             <button @click="playAgain">PLAY AGAIN</button>
         </section>
         <section id="controls" v-else>
@@ -43,7 +43,13 @@
         </section>
         <section id="log" class="container">
             <h2>Battle Log</h2>
-            <ul></ul>
+            <ul>
+                <li v-for="log in battleLogMessages">
+                    <span :class="{'log--player': log.actionBy === 'player', 'log--monster': log.actionBy === 'monster'}">{{ log.actionBy === 'player' ? 'Player' : 'Monster'}}</span>
+                    <span v-if="log.actionType === 'heal'"> heals for <span class="log--heal">{{ log.actionValue }}</span></span>
+                    <span v-else> attacks for <span class="log--damage">{{ log.actionValue }}</span></span>
+                </li>
+            </ul>
         </section>
     </div>
 </body>
